--- a/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -1,48 +1,27 @@
 ﻿@{
-    Layout = null;
-    var seriesTitle = "The Amazing Spider-Man";
-    var issueNumber = 700;
-    var description = "<p>Final issue! Witness the final hours of Doctor Octopus' life and his one, last, great act of revenge! Even if Spider-Man survives... <strong>will Peter Parker?</strong></p>";
-    var artists = new string[]
-    {
-        "Script: Dan Slott",
-        "Pencils: Humberto Ramos",
-        "Inks: Victor Olazaba",
-        "Colors: Edgar Delgado",
-        "Letters: Chris Eliopoulos"
-    };
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Comic Book Detail";
+
+
+ 
 }
 
-<!DOCTYPE html>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title></title>
-</head>
-<body>
-    <div>
-    <h1>@seriesTitle</h1>
-        <h2>Issue #@issueNumber</h2>
+    <h1>@ViewBag.SeriesTitle</h1>
+        <h2>Issue #@ViewBag.IssueNumber</h2>
 
         <h5>Description</h5>
-        <div>@Html.Raw(description)</div>
+        <div>@Html.Raw(ViewBag.Description)</div>
 
-        @if (artists.Length > 0)
+        @if (ViewBag.Artists.Length > 0)
         {
             <h5>Artists: </h5>
                     <div>
                         <u1>
-                            @foreach (var artist in artists)
+                            @foreach (var artist in ViewBag.Artists)
                             {
                                 <li>@artist </li>
                             }
                         </u1>
                     </div>
         }
-
-
-
-    </div>
-</body>
-</html>
